# blab-chatbot-openai

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml  run.py  settings_openai_TEMPLATE.py  setup.cfg
docs/: conf.py  title.rst
src/blab_chatbot_openai/: __init__.py  __main__.py  conversation_openai.py  gpt3_settings_format.py  openai_settings_format.py
