[tool.poetry]
name = "blab-chatbot-openai"
version = "0.1.0"
description = ""
authors = ["C4AI"]
readme = "README.md"
#packages = [{include = "blab_chatbot_openai"}]

[tool.poetry.dependencies]
python = "^3.10"
blab-chatbot-bot-client = { extras = ["ws"], git = "https://github.com/C4AI/blab-chatbot-bot-client.git", branch = "main" }
openai = "0.27.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
darglint = "*"
flake8 = "*"
flake8-annotations = "*"
flake8-docstrings = "*"
flake8-bugbear = "*"
python-lsp-server = { extras = ["all"], version = "*" }
pyupgrade = "*"
mypy = "^1.2.0"
pre-commit = "^2.18.1"
ruff = "^0.0.261"
pydocstyle = "^6.2.2"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"
sphinx-autoapi = "^2.1.0"
furo = "^2023.5.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "C4", "T10", "DJ", "EM", "EXE", "ISC", "ICN", "ISC002", "ISC003", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN002", "ANN003", "ANN1", "ANN204", "ANN401", "ARG002", "A003", "D105", "D106", "D203", "D213", "D407", "D417", "DTZ", "I001", "TRY00"]

[tool.ruff.pydocstyle]
ignore-decorators = ["overrides.overrides"]
